<resources>
    <string name="app_name">Learn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_quiz">Quiz</string>

    <string name="greeting_home">Welcome to the Learning App</string>
    <string name="greeting_faves">Greetings from favorites!</string>
    <string name="greeting_profile">Log in to check your progress</string>
    <string name="welcome_quiz">Let\'s take some quizzes, shall we?</string>
    <string name="question_label">Question:</string>
    <string name="question_placeholder">Question goes here</string>
    <string name="select_label">Select One:</string>
    <string name="option_1_label">First Choice</string>
    <string name="option_2_label">Second Choice</string>
    <string name="option_3_label">Third Choice</string>
    <string name="option_4_label">Fourth Choice</string>
    <string name="next_button">Next</string>
    <string name="done_button">Done</string>
    <string name="done_message">Congratulations on completing %1$s!</string>
    <string name="answer_correct_message">Correct!</string>
    <string name="answer_wrong_message">Wrong answer.</string>
    <string name="score_message">Score: %1$d</string>
    <string name="high_score_message">High Score: %1$d</string>
    <string name="preference_file_key">com.facebook.samples.learn.PREFERENCE_FILE_KEY</string>

    <string name="facebook_app_id">1675950612674942</string>

    <string name="greeting_profile_logged_in">Welcome, %1$s</string>

</resources>
